# dbt-plan

./: .coverage  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.ko.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: GETTING-STARTED-DEV.md  architecture-decisions.md  ci-integration.md  configuration.md  design-spec.md  implementation-plan.md  index.html  releasing.md  research-findings.md
examples/ci-workflow/: dbt-plan.yml
examples/sample-project/: README.md  run-example.sh
examples/sample-project/base/: manifest.json
examples/sample-project/base/compiled/: dim_device.sql  fct_daily_metrics.sql  int_unified.sql
src/dbt_plan/: __init__.py  cli.py  columns.py  config.py  diff.py  formatter.py  manifest.py  predictor.py  warehouse.py
tests/: conftest.py  test_adversarial_sql.py  test_childmap_edge_cases.py  test_ci_workflow_quality.py  test_cli.py  test_column_ordering.py  test_columns.py  test_config.py  test_dbt_cloud_layout.py  test_dbt_e2e.py  test_dialect_migration.py  test_diff.py  test_ecommerce_project.py  test_example_project.py  test_exception_audit.py  test_false_safe_hunt.py  test_formatter.py  test_github_pr_quality.py  test_integration.py  test_json_pipeline.py  test_large_manifest.py  test_manifest.py  test_multi_dialect.py  test_mutation_analysis.py  test_null_safety.py  test_oncall_triage.py  test_package_developer.py  test_packaging.py  test_platform_deploy.py  test_predict_exhaustive.py  test_predictor.py  test_real_project.py  test_run_subprocess.py  test_snapshot_lifecycle.py  test_snapshot_recovery.py  test_stats_accuracy.py  test_user_journeys.py  test_verbose_debugging.py  test_warehouse.py
tests/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
tests/dbt_project/models/marts/: dim_apps.sql  fct_events.sql
tests/dbt_project/models/staging/: stg_events.sql
tests/fixtures/: cte_chain.sql  explicit_columns.sql  select_star.sql  union_staging.sql  variant_access.sql  window_functions.sql
