[project]
name = "dbt-plan"
version = "0.1.0"
description = "Preview what DDL changes dbt run will execute on Snowflake"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "ab180" }]
keywords = ["dbt", "snowflake", "ddl", "impact-analysis", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "sqlglot>=26.0.0",
]

[project.scripts]
dbt-plan = "dbt_plan.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/ab180/dbt-plan"
Repository = "https://github.com/ab180/dbt-plan"
Issues = "https://github.com/ab180/dbt-plan/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_plan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
